update vercel file

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
     "version": 2,
     "builds": [
         {
-            "src": "main.py",
+            "src": "/daily_quest_api/api.py",
             "use": "@vercel/python"
         }
     ],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/main.py"
+            "dest": "daily_quest_api/api.py"
         }
     ]
 }
