--- a/requirements.txt
+++ b/requirements.txt
@@ -18,10 +18,12 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+mongoengine==0.28.2
 orjson==3.10.3
 pydantic==2.7.3
 pydantic_core==2.18.4
 Pygments==2.18.0
+pymongo==4.7.3
 python-decouple==3.8
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -37,4 +39,3 @@ ujson==5.10.0
 uvicorn==0.30.1
 watchfiles==0.22.0
 websockets==12.0
-pydantic-settings
