--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ mdurl==0.1.2
 mongoengine==0.28.2
 orjson==3.10.3
 pydantic==2.7.3
+pydantic-settings==2.3.1
 pydantic_core==2.18.4
 Pygments==2.18.0
 pymongo==4.7.3
